fixed some titles on small screens overflowing their borders

--- a/source/css/eventSponsors.css
+++ b/source/css/eventSponsors.css
@@ -139,3 +139,10 @@ textarea[type=text]{
         grid-row: 2;
     }
 }
+
+@media screen and (max-width: 700px){
+
+    .sT{
+        height: unset;
+    }
+}
